# bio-jardas

./: .dockerignore  .env.sample  .gitignore  .ipython_startup.py  AGENTS.md  Dockerfile  GEMINI.md  Makefile  README.md  dev_setup.sh  docker-compose.yaml  pyproject.toml
bio_jardas/: bot.py  cogs.py  command_checks.py  constants.py  decorators.py  dependency_injection.py  emojis.py  example_cogs.py  exceptions.py  guild_custom.py  main.py  observability.py  parser.py  settings.py  shortcuts.py  stopwords.py  utils.py
bio_jardas/cogs/: __init__.py  config.py  game.py  hug.py  message.py  reply.py  roast.py  vocabulary.py
bio_jardas/db/: __init__.py  base.py  config.py  engine.py  exceptions.py  message.py  models.py  repositories.py  types.py
bio_jardas/db/models/: game.py  message.py  public.py
bio_jardas/db/repositories/: base.py  game.py  message.py  public.py
bio_jardas/domain_objects/: config.py  game.py
bio_jardas/domains/config/: cogs.py  models.py  objects.py  repositories.py  services.py
bio_jardas/domains/game/: cogs.py  enums.py  jobs.py  models.py  objects.py  repositories.py  services.py
bio_jardas/domains/game/games/: base.py  roulette.py  shadowban.py
bio_jardas/domains/message/: dtos.py  enums.py  models.py  objects.py  repositories.py  services.py
bio_jardas/domains/message/cogs/: fortune_teller.py  hug.py  reply.py  roast.py  vocabulary.py
bio_jardas/domains/schedule/: cogs.py  jobs.py  objects.py  parsers.py  utils.py
bio_jardas/domains/time_gate/: enums.py  exceptions.py  models.py  repositories.py  services.py  strategies.py
bio_jardas/dtos/: config.py  message.py
bio_jardas/services/: config.py  game.py  message.py
docs/: USER_INTERACTIONS_CURRENT.md  USER_INTERACTIONS_PROPOSED.md
etl/: load_messages.py
makes/: db.mk  docker.mk  py.mk
migrations/: env.py
migrations/versions/: 202508221533_bf177fc892f9_add_messagegroup_and_message.py  202508221550_dd4cbb78f072_add_messagegroup_and_message.py  202508221728_bbde9e7bd61f_add_messagegroup_and_message.py  202508232106_3fb673f632e4_create_message_schema.py  202508232120_d9830eb71627_initial_message_related_models.py  202508232302_916737379902_add_config.py  202509251210_12a41310ec61_adds_message_models.py  202509251211_c276d5ad20b3_adds_config.py  202510211439_b5dbcfc408d7_create_game_schema.py  202510241455_130a17c5cd9e_adds_score.py  202510301415_d6c9b9098c33_adds_time_gate.py  202601301008_dda3c765cd72_adds_channel_enabled_model.py  202604182000_8832bce77485_adds_intensity_table_and_drops_config.py
resources/: stopwords.csv
tests/: conftest.py  test_intensity_service.py  test_message_service.py
tests/db/: test_base_repository.py  test_game_repository.py  test_intensity_repository.py  test_message_repositories.py  test_schema_integrity.py  test_time_gate_repository.py
tower/: docker-compose.yaml
