[project]
name = "bio-jardas"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "apscheduler>=3.11.1",
    "dishka>=1.7.1",
    "disnake>=2.10.1",
    "inflect>=7.5.0",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.8.1",
    "pytz>=2025.2",
    "sqlalchemy[asyncio]>=2.0.43",
    "structlog>=25.4.0",
    "unidecode>=1.4.0",
    "whenever>=0.9.3",
    "whenever-sqlalchemy>=0.1.0",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.12.7",
]
etl = [
    "cyclopts>=3.22.5",
    "pandas>=2.3.2",
]

[tool.uv.build-backend]
# this is necessary so uv run finds our modules
module-root = ""

[tool.ruff]
lint.select = [
    "E", "W",  # pycodestyle
    "F",       # Pyflakes
    "I",       # isort
    "B",       # flake8-bugbear
    "UP",      # pyupgrade
    "N",       # pep8-naming
    "RUF",     # Ruff-specific
]
lint.ignore = [
    "RUF012",  # Mutable class attributes (annoying with SQLAlchemy/Dishka)
    "B904",    # Within an except clause, raise from error or None
]
exclude = [".ipython_startup.py"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # S101 is part of RUF, we need it for asserts in tests

[tool.alembic]
script_location = "%(here)s/migrations"
version_locations = ["%(here)s/migrations/versions"]

file_template = "%%(year)d%%(month).2d%%(day).2d%%(hour).2d%%(minute).2d_%%(rev)s_%%(slug)s"
truncate_slug_length = "40"
output_encoding = "utf-8"

prepend_sys_path = [
    "."
]

[[tool.alembic.post_write_hooks]]
name = "ruff"
type = "module"
module = "ruff"
options = "format REVISION_SCRIPT_FILENAME"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
